# pyteam-skills

./: LICENSE  Makefile  README.md  pyproject.toml
examples/: config.example.yml
src/pyteam_skills/: cli.py  config.py  dashboard.py  matrix.py  repo_scan.py  utils.py
tests/: conftest.py  test_config.py  test_dashboard.py  test_matrix.py  test_matrix_extended.py  test_utils.py
